
Version 2.10 ->
---------------
 - improved recovery from toString() failure, displaying class name instead
 - non public classes listed on command line now wrapped (Lukasz Jancewicz)
 - fixed bug with generating wrappers for unimplemented interface methods
 - 

Version 2.9 -> 2.10
-------------------
 - added javadoc for org.apache.jcc.PythonVM class (Bill Janssen)
 - fixed bug with Constructor.getGenericParameterTypes() losing first parameter

Version 2.8 -> 2.9
------------------
 - fixed bug with excluding inner classes only (Christian Heimes)
 - fixed bug with Python gc in non-attached JVM thread (Christian Heimes)

Version 2.7 -> 2.8
------------------
 - fixed bug with --module using relative paths (Roman Chyla)
 - made fully qualified C++ class names absolute
 - fixed bug with parameterized types not requiring classes found in parameters
 - fixed bug with missing space between >> of nested generics

Version 2.6 -> 2.7
------------------
 - added 'IGNORE' to reserved word list
 - improved --exclude logic to also exclude inner classes of excluded classes
 - moved --find-jvm-dll logic to __init__.py to accomodate Python 2.7
 - fixed bug with faulty Java version logic causing crashes with Java 1.5
 - added logic for finding JavaVM.framework headers on Mac OS X (Bill Janssen)

Version 2.5 -> 2.6
------------------
 - added freebsd7 settings to setup.py (Sujan Shakya)
 - added support for unix-specific --home distutils install parameter
 - added support for extracting JAVAHOME from Windows registry (Bill Janssen)
 - updated MANIFEST.in as sdist started creating incomplete source archives
 - improved support for building on Windows with mingw32 (Bill Janssen)
 - added support for --find-jvm-dll parameter (Bill Janssen)
 - fixed bug with not inheriting type parameters to inner parameterized classes
 - added support for of_() method to set instance type parameters
 - fixed bug with not heeding type parameter for --sequence get method