@@ -4,6 +4,7 @@ Version 2.10 ->
  - improved recovery from toString() failure, displaying class name instead
  - non public classes listed on command line now wrapped (Lukasz Jancewicz)
  - fixed bug with generating wrappers for unimplemented interface methods
+ - fixed bug with generating propMethods for void getters
  - 
 
 Version 2.9 -> 2.10
